[gd_scene load_steps=2 format=3 uid="uid://7jk3be4uoo3u"]

[ext_resource type="Script" path="res://scripts/gui/menu.gd" id="1_8oslk"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_8oslk")

[node name="MenuLabel" type="RichTextLabel" parent="."]
offset_top = 441.0
offset_right = 225.0
offset_bottom = 648.0
mouse_filter = 1
bbcode_enabled = true
text = "[center] Start Menu"

[node name="PlayButton" type="Button" parent="MenuLabel"]
layout_mode = 0
offset_left = 92.0
offset_top = 37.0
offset_right = 133.0
offset_bottom = 68.0
text = "Play"

[node name="ControlsButton" type="Button" parent="MenuLabel"]
layout_mode = 0
offset_left = 78.0
offset_top = 81.0
offset_right = 152.0
offset_bottom = 112.0
text = "Controls"

[node name="SettingsButton" type="Button" parent="MenuLabel"]
layout_mode = 0
offset_left = 78.0
offset_top = 122.0
offset_right = 152.0
offset_bottom = 153.0
text = "Settings"

[node name="CreditsButton" type="Button" parent="MenuLabel"]
layout_mode = 0
offset_left = 78.0
offset_top = 162.0
offset_right = 152.0
offset_bottom = 193.0
text = "Credits"

[connection signal="pressed" from="MenuLabel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuLabel/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MenuLabel/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuLabel/CreditsButton" to="." method="_on_credits_button_pressed"]
